# OmniXEP

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libbitcoinconsensus.pc.in  libxepconsensus.pc.in
build_msvc/: README.md  bitcoin_config.h  libsecp256k1_config.h  msvc-autogen.py  xep_config.h
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp  xep-cli.bash-completion  xep-tx.bash-completion  xepd.bash-completion
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  xep-conf.md  zmq.md
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-wallet.1  bitcoind.1  xep-cli.1  xep-qt.1  xep-tx.1  xep-wallet.1  xepd.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.omnicore.include  Makefile.omnitest.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  addrdb.h  (+160 more)
(+1209 files in other folders)
