dist_man1_MANS=

if BUILD_XEPD
  dist_man1_MANS+=bitcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_XEP_CLI
  dist_man1_MANS+=bitcoin-cli.1
endif

if BUILD_XEP_TX
  dist_man1_MANS+=bitcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_XEP_WALLET
  dist_man1_MANS+=bitcoin-wallet.1
endif
endif
